# dimatech_test_project

./: .flake8  Makefile  README.md  default.env  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 27093299c4d3_seed_user_admin_and_account.py  e2f418f376f4_create_user_account_and_payment_models.py  e6e2f031118a_changed_transaction_id_on_payment_model_.py
backend/app/: main.py
backend/app/core/: __init__.py  base_models.py  config.py  db.py  dependencies.py  exceptions.py  security.py
backend/app/modules/accounting/models/: __init__.py  account.py  payment.py
backend/app/modules/accounting/routes/: webhook.py
backend/app/modules/accounting/schemas/: __init__.py  account.py  payment.py  webhook.py
backend/app/modules/accounting/services/: __init__.py  accounting.py
backend/app/modules/users/models/: user.py
backend/app/modules/users/routes/: __init__.py  admin.py  auth.py  user.py
backend/app/modules/users/schemas/: __init__.py  user.py
backend/app/modules/users/services/: __init__.py  admin.py  user.py
